[gd_scene load_steps=2 format=3 uid="uid://b7v2l52pu28nh"]

[ext_resource type="Script" path="res://addons/map_generator/map_generator_dock.gd" id="1_qj0fy"]

[node name="MapGenerator" type="VBoxContainer"]
rect_min_size = Vector2(0, 100)
offset_right = 79.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1_qj0fy" )
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_anchors_": false,
"_edit_use_custom_anchors": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 134.0
offset_bottom = 31.0

[node name="GeneratorScriptEdit" type="LineEdit" parent="HBoxContainer"]
offset_right = 64.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="BrowseGeneratorScriptButton" type="Button" parent="HBoxContainer"]
offset_left = 68.0
offset_right = 134.0
offset_bottom = 31.0
text = "Browse"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_top = 35.0
offset_right = 134.0
offset_bottom = 171.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
offset_right = 50.0
offset_bottom = 136.0

[node name="SeedLabel" type="Label" parent="HBoxContainer2/VBoxContainer"]
offset_right = 50.0
offset_bottom = 26.0
text = "Seed"

[node name="WidthLabel" type="Label" parent="HBoxContainer2/VBoxContainer"]
offset_top = 30.0
offset_right = 50.0
offset_bottom = 56.0
text = "Width"

[node name="HeightLabel" type="Label" parent="HBoxContainer2/VBoxContainer"]
offset_top = 60.0
offset_right = 50.0
offset_bottom = 86.0
text = "Height"

[node name="LevelLabel" type="Label" parent="HBoxContainer2/VBoxContainer"]
offset_top = 90.0
offset_right = 50.0
offset_bottom = 116.0
text = "Level
"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2"]
offset_left = 54.0
offset_right = 134.0
offset_bottom = 136.0
size_flags_horizontal = 3

[node name="SeedEdit" type="LineEdit" parent="HBoxContainer2/VBoxContainer2"]
offset_right = 80.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="WidthNum" type="SpinBox" parent="HBoxContainer2/VBoxContainer2"]
offset_top = 35.0
offset_right = 80.0
offset_bottom = 66.0
min_value = 1.0
max_value = 1024.0
value = 16.0
rounded = true

[node name="HeightNum" type="SpinBox" parent="HBoxContainer2/VBoxContainer2"]
offset_top = 70.0
offset_right = 80.0
offset_bottom = 101.0
min_value = 1.0
max_value = 1024.0
value = 16.0
rounded = true

[node name="LevelNum" type="SpinBox" parent="HBoxContainer2/VBoxContainer2"]
offset_top = 105.0
offset_right = 80.0
offset_bottom = 136.0
min_value = 1.0
max_value = 1024.0
value = 1.0
rounded = true

[node name="GenerateButton" type="Button" parent="."]
offset_top = 175.0
offset_right = 134.0
offset_bottom = 206.0
text = "Generate"

[connection signal="text_changed" from="HBoxContainer/GeneratorScriptEdit" to="." method="_on_generator_script_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/BrowseGeneratorScriptButton" to="." method="_on_browse_generator_script_button_pressed"]
[connection signal="text_changed" from="HBoxContainer2/VBoxContainer2/SeedEdit" to="." method="_on_seed_edit_text_changed"]
[connection signal="value_changed" from="HBoxContainer2/VBoxContainer2/WidthNum" to="." method="_on_width_num_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/VBoxContainer2/HeightNum" to="." method="_on_height_num_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/VBoxContainer2/LevelNum" to="." method="_on_level_num_value_changed"]
[connection signal="pressed" from="GenerateButton" to="." method="_on_generate_button_pressed"]
